Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>tuanvu96 by tuanvu96</title>
+    <title>TRANG CÁ NHÂN CỦA ANH VŨ by tuanvu96</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>tuanvu96</h1>
+            <h1>TRANG CÁ NHÂN CỦA ANH VŨ</h1>
             <h2>my web</h2>
           </span>
           <span class="left-tail"></span>
